fix page headings on mobile

--- a/_src/_assets/styl/content.styl
+++ b/_src/_assets/styl/content.styl
@@ -11,13 +11,8 @@
 .page-title
     @extend .h2, .heading-band
     color: $brand-grey-light
-    margin: 0
-
-    @media $breakpoint2
-        margin-left: -108%
-
-        .page-photos &
-            margin-bottom: ($line-height-computed*4)
+    margin-top: $line-height-computed
+    margin-bottom: $line-height-computed
 
     .hash
         @extend .h3
